<resources>
    <string name="app_name">SchoolProject</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="select_school">选择学校</string>
    <string name="input_school_name">点击搜索学校</string>
    <string name="cancle">取消</string>
    <string name="location_ing">定位中...</string>
    <string name="select_school_and_are">，请选择你所在的学校和校区</string>
    <string name="location_fail_again">定位失败，请保证网络通畅，点击重新定位！</string>
    <string name="permission_fail">授权失败，请在设置里开启权限！</string>
    <string name="comfirm">确定</string>
    <string name="readed">已阅</string>
    <string name="next">下一步</string>
    <string name="not_select_school">你还未选择校区</string>
    <string name="select_operate_name">选择运营商</string>
    <string name="toast_select">温馨提示：</string>
    <string name="toast_select_1">可手动点击手机卡选择其他运营商。\n如系统推荐正确，则无需进行选择</string>
    <string name="setting_noftify_type">设置提醒方式</string>
    <string name="message_push">消息推送</string>
    <string name="jar">震动</string>
    <string name="music">铃声</string>
    <string name="submit">提交</string>
</resources>
