<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.pursuege.schoolproject.ui.ApplyNotifyActivity">


    <EditText
        android:id="@+id/main_search_et"
        style="@style/style_input_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/icon_search_bg"
        android:ems="30"
        android:hint="@string/input_school_name"
        android:imeOptions="actionSearch"
        android:inputType="textPersonName"
        android:paddingLeft="28dp"
        android:paddingRight="12dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:onClick="onclickLocation"
        app:layout_constraintLeft_toLeftOf="@+id/main_search_et"
        app:layout_constraintTop_toBottomOf="@+id/main_search_et"
        app:srcCompat="@drawable/icon_location" />

    <TextView
        android:id="@+id/main_localtion_tv"
        style="@style/style_toast_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="onclickLocation"
        android:padding="8dp"
        android:text="@string/location_ing"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="12dp"
        android:background="@color/all_background"
        app:layout_constraintBottom_toTopOf="@+id/main_search_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ExpandableListView
        android:id="@+id/main_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_localtion_tv"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button4"
        style="@style/style_txt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/icon_button_bg"
        android:clickable="true"
        android:onClick="onclickMainNext"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
