<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.pursuege.schoolproject.ui.SelectOperatNameActivity">

    <View
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:background="@color/all_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="25dp">

        <TextView
            style="@style/style_toast_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toast_select" />

        <TextView
            style="@style/style_toast_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toast_select_1" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp">


        <LinearLayout
            android:id="@+id/linear_operate_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/icon_sim_bg1" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:src="@drawable/icon_sim_bg2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentTop="true"
            android:paddingTop="4dp">

            <TextView
                style="@style/style_text_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:padding="8dp"
                android:paddingLeft="8dp"
                android:text="SIM1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView"
                style="@style/style_text_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:paddingLeft="8dp"

                android:text="SIM2"
                android:textColor="@color/white" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/select_operate1_linear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


            </LinearLayout>


            <LinearLayout
                android:id="@+id/select_operate2_linear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="invisible">

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/apply_notify_next_btn"
        style="@style/style_txt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/icon_button_bg"
        android:clickable="true"
        android:onClick="onclickOperateNext"
        android:paddingBottom="14dp"
        android:paddingTop="14dp"
        android:text="@string/readed" />
</LinearLayout>
